hphp/test/zend/good/ext/hash/tests/sha512.php.skipif
<?hh
<<__EntryPoint>> function main() {
if(!extension_loaded("hash")) print "skip";
}
